# native-devtools-mcp

./: .gitignore  AGENTS.md  CDP_PARITY.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY_AUDIT.md  agents.md  server.json
.github/workflows/: release.yml
AppDebugKit/: Package.swift
AppDebugKit/Sources/AppDebugKit/: AppDebugKit.swift  DebugServer.swift
AppDebugKit/Sources/AppDebugKit/Input/: InputSimulator.swift
AppDebugKit/Sources/AppDebugKit/Protocol/: Messages.swift
AppDebugKit/Sources/AppDebugKit/ViewTree/: ViewNode+NSView.swift
AppDebugKit/Tests/AppDebugKitTests/: AppDebugKitTests.swift
TestApp/: Package.swift
TestApp/Sources/TestApp/: TestApp.swift
benches/: find_image_bench.rs
examples/: README.md  android-quickstart.md  claude-code-setup.md  claude-desktop-setup.md  cursor-setup.md  end-to-end-desktop-flow.md  native-app-ax-dispatch-flow.md  native-app-click-flow.md  ocr-fallback-and-element-inspection.md  template-matching-flow.md
npm/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/win32-x64/: package.json
packaging/macos/NativeDevtools.app/Contents/: Info.plist
scripts/: build-from-source.sh  build-macos-app.sh  notarize-macos-app.sh
src/: lib.rs  main.rs  server.rs
src/android/: device.rs  input.rs  mod.rs  navigation.rs  screenshot.rs  ui_automator.rs
src/app_protocol/: client.rs  messages.rs
src/cdp/: dom_discovery.rs  mod.rs  snapshot.rs  tools.rs
src/cdp/tools/: element_at_point.rs  input.rs  mod.rs  pages.rs  script.rs
src/cli/: mod.rs  setup.rs  verify.rs
src/macos/: accessibility.rs  app.rs  ax.rs  display.rs  input.rs  mod.rs  ocr.rs  screenshot.rs  window.rs
src/tools/: app_protocol.rs  ax_click.rs  ax_response.rs  ax_row_target.rs  ax_select.rs  ax_session.rs  ax_set_value.rs  ax_snapshot.rs  find_image.rs  hover_tracker.rs  image_cache.rs  input.rs  load_image.rs  mod.rs  navigation.rs  probe_app.rs  screen_recorder.rs  screenshot.rs  screenshot_cache.rs
src/windows/: app.rs  display.rs  input.rs  mod.rs  ocr.rs  screenshot.rs  uia.rs  window.rs
tests/: android_smoke_tests.rs  ax_dispatch_tests.rs  cdp_dom_discovery_tests.rs  screenshot_metadata_tests.rs  tool_gating_tests.rs  window_capture_alignment_tests.rs
tests/harness/: mod.rs
