[package]
name = "native-devtools-mcp"
version = "0.1.4"
edition = "2021"

[dependencies]
# MCP SDK
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image encoding
base64 = "0.22"

# Temp files for screenshots
tempfile = "3"

# macOS frameworks
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# WebSocket client for app debug protocol
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2.5"

[lints.rust]
# Suppress cfg warnings from objc crate macros
unexpected_cfgs = "allow"
